ui: scroll bar styling and small padding fixes
- add consistent markup structure to organization layout
- add organization/team dropdown contanier with fixed height
- add search container with fixed height
- add filter container with generic height and scrollable content
- make organization/team header sticky/non-scrollable
- remove page content padding which makes page scrollbar appear when it's not needed

^fox-64387

--- a/apps/web/src/scss/base.scss
+++ b/apps/web/src/scss/base.scss
@@ -41,14 +41,9 @@ body {
 .page-header,
 .secondary-header,
 .tabbed-header {
-  padding-top: $navbar-bottom-margin;
+  padding-top: $sidebar-padding-top;
 
-  // Attempted to make page-header float, but it causes issues with the
-  // layering of nested dialogs in bulk actions, so will require a
-  // greater restructure to support.
-  // position: sticky;
-  // top: $navbar-height;
-  // z-index: 1;
+
 
   @include themify($themes) {
     background: themed("backgroundColor");
